-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.5.1
-
Fix Version/s: 5.12.0 Alpha
-
Component/s: Build tools: uic
-
Labels:None
-
Commits:ff18b02f21a04f7092b58be04be5a40df3ef993b
Don't generate code using QStringLiteral as this can create a problem if the code is used in a DLL. Since the code is generated by uic then it should not be using QStringLiteral as it is not known where the generate code will end up, if it is in a user created dll then it can cause a crash when being unloaded due to the fact that QStringLiteral expects to be valid the whole time.
- duplicates
-
QTBUG-62625 App crashes on termination if a font is loaded by unloaded library
-
- Closed
-
- relates to
-
QTBUG-65251 uic generates QLatin1String for shortcuts
-
- Closed
-
- replaces
-
QTBUG-46880 QFontCache crash when DLL is unloaded
-
- Closed
-